[package]
name = "rust-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/includes/utils.rs"
crate-type = ["cdylib"]

[[bin]]
name = "my_binary"
path = "src/main.rs"


[dependencies]